--- a/alianzas.html
+++ b/alianzas.html
@@ -59,7 +59,7 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#nosotros">Guía turística</a>
+                    <a class="nav-link" href="turismo.html">Guía turística</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="acerca.html">Nosotros</a>
