--- a/turismo.html
+++ b/turismo.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <link rel="icon" type="image/png" href="img/logo.png" />
 
     <title>COOMUSTRANSTUR</title>
@@ -50,7 +48,7 @@
                             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                                 <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
                                     <li class="nav-item active">
-                                        <a class="nav-link" href="turismo.html">Guía turística</a>
+                                        <a class="nav-link" href="#nosotros">Guía turística</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="acerca.html">Nosotros</a>
@@ -68,68 +66,5 @@
                 </header>
                 <!-- texto main -->
     </section>
-
-    <section class="container" id="politica">
-        <div class="row justify-content-around mt-4">
-
-            <div class="col-12 mb-3 text-center title font-weight-bold">
-                <p class="text-uppercase">Políticas de Calidad</p>
-            </div>
-
-            <div class="col d-flex align-items-center" data-aos="flip-left" data-aos-duration="1200">
-                <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer las
-                    necesidades y
-                    expectativas
-                    de
-                    nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
-                </p>
-            </div>
-
-
-            <div class="w-100"></div>
-            <div class="col text-center d-flex align-items-center justify-content-center mt-3" data-aos="flip-right"
-                data-aos-duration="1200">
-                <strong> Valores corporativos:</strong>
-                <ul class="list-unstyled">
-                    <li>Ayuda mutua</li>
-                    <li>Responsabilidad</li>
-                    <li>Honestidad </li>
-                    <li>Democracia</li>
-                    <li>Equidad </li>
-                    <li>Solidaridad </li>
-                    <li>Honestidad y transparencia</li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Footer  -->
-    <section id="footer" class="mt-4">
-        <div class="row">
-            <div class="col-12 text-center">
-                <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
-            </div>
-            <div class="col-6 d-flex align-items-center justify-content-end">
-                <p class="d-inline">
-                    <em>NIT: 830.500.789-9</em>
-                </p>
-            </div>
-            <div class="col-6 d-flex align-items-center justify-content-start">
-                <span style="font-size: 2em;">
-                    <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                </span>
-            </div>
-        </div>
-    </section>
-
-
-
-    <!-- Scripts -->
-
-    <script src="js/bootstrap.min.js"></script>
 </body>
-
 </html>
