--- a/index.html
+++ b/index.html
@@ -125,11 +125,14 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col tarjeta2">
           <h3>Noticias</h3>
 
+          <p class="tarjeta2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas in molestias eos cum dicta, beatae explicabo
+            itaque quia? Eveniet architecto omnis eos dolor at mollitia quaerat. Ipsum quidem id odio?</p>
+
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5 tarjeta2">
           <h3>Eventos</h3>
 
           <div>
