--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="col tarjeta2">
           <h3>Noticias</h3>
 
-          <p class="tarjeta2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas in molestias eos cum dicta, beatae explicabo
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas in molestias eos cum dicta, beatae explicabo
             itaque quia? Eveniet architecto omnis eos dolor at mollitia quaerat. Ipsum quidem id odio?</p>
 
         </div>
