--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             itaque quia? Eveniet architecto omnis eos dolor at mollitia quaerat. Ipsum quidem id odio?</p>
 
         </div>
-        <div class="col-sm-5 tarjeta2">
+        <div class="col-sm-5 col-xl-4 tarjeta2">
           <h3>Eventos</h3>
 
           <div>
