--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <div class="row justify-content-center">
       <div class="flecha-abajo">
-        <a href="#footer"><i class="fa fa-angle-down"></i></a>
+        <a href="#noticias"><i class="fa fa-angle-down"></i></a>
       </div>
     </div>
   </section>
@@ -115,7 +115,7 @@
 
   <!-- Contenido interactivo -->
   <main>
-    <section class="container-fluid">
+    <section id="noticias" class="container-fluid">
 
       <div class="row">
 
@@ -125,11 +125,47 @@
           </div>
         </div>
 
-        <div class="col tarjeta2">
+        <div class="col tarjeta2 he">
           <h3>Noticias</h3>
 
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas in molestias eos cum dicta, beatae explicabo
-            itaque quia? Eveniet architecto omnis eos dolor at mollitia quaerat. Ipsum quidem id odio?</p>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block" src="img/Sin título-2.svg" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Noticia 1</h5>
+                  <p>El evento numero 1 en...</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/Sin título-1.svg" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Noticia 2</h5>
+                  <p>El evento numero 2 en...</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid" src="img/Sin título-3.svg" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Noticia 3</h5>
+                  <p>El evento numero 3 en...</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
 
         </div>
         <div class="col-sm-5 col-xl-4 tarjeta2">
