--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block" src="img/Sin título-2.svg" alt="First slide">
+                <img class="d-block w-100 img-fluid" src="img/Sin título-2.svg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Noticia 1</h5>
                   <p>El evento numero 1 en...</p>
@@ -172,7 +172,7 @@
           <h3>Eventos</h3>
 
           <div>
-            <a class="twitter-timeline" data-height="400" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets
+            <a class="twitter-timeline" data-height="430" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets
               by TwitterDev</a>
           </div>
         </div>
