--- a/index.html
+++ b/index.html
@@ -179,17 +179,53 @@
 
       </div>
     </section>
+
+    <section id="biodiversidad">
+      <div class="contaienr">
+        <div class="row">
+
+          <div class="col mb-3 text-center title font-weight-bold">
+            <p class="text-uppercase">Rincón de Biodiversidad en la zona</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="gastronomia">
+        <div class="contaienr">
+          <div class="row">
+  
+            <div class="col mb-3 text-center title font-weight-bold">
+              <p class="text-uppercase">Gastronomía</p>
+            </div>
+  
+          </div>
+        </div>
+      </section>
+
+      <section id="cultira">
+          <div class="contaienr">
+            <div class="row">
+    
+              <div class="col mb-3 text-center title font-weight-bold">
+                <p class="text-uppercase">Cultura de la región pacífico</p>
+              </div>
+    
+            </div>
+          </div>
+        </section>
+
   </main>
 
+  <div class="container-fluid pl-0 pr-0 mb-5 mt-4">
+    <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.692860584939!2d-76.93038208467371!3d3.875888349334545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1540246532405"
+      width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
 
   <!-- Contacto  -->
   <section id="contacto">
 
-    </div>
-    <div class="container-fluid pl-0 pr-0 mb-5 mt-4">
-      <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.692860584939!2d-76.93038208467371!3d3.875888349334545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1540246532405"
-        width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
     <div class="container">
       <div class="row">
 
