--- a/alianzas.html
+++ b/alianzas.html
@@ -73,7 +73,11 @@
                 </ul>
               </div>
             </nav>
-            <img src="holder.js/1900x400?theme=vine">
+
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="" allowfullscreen></iframe>
+            </div>
+
           </div>
         </header>
         <!-- texto main -->
