--- a/alianzas.html
+++ b/alianzas.html
@@ -74,14 +74,12 @@
               </div>
             </nav>
 
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="" allowfullscreen></iframe>
-            </div>
-
+            
           </div>
         </header>
         <!-- texto main -->
-  </section>
+      </section>
+      <video src="video/casa wenka.mp4" height="400px" width="100%"></video>
 
 
   <section>
