--- a/index.html
+++ b/index.html
@@ -181,8 +181,11 @@
     </section>
 
     <section id="biodiversidad">
-      <div class="contaienr">
-        <div class="row">
+      <div class="container">
+        <div class="">
+          <img src="img/biodiversidad.jpg" height="100px" alt="">
+        </div>
+        <div class="row pt-5">
 
           <div class="col mb-3 text-center title font-weight-bold">
             <p class="text-uppercase">Rincón de Biodiversidad en la zona</p>
