--- a/index.html
+++ b/index.html
@@ -182,13 +182,37 @@
 
     <section id="biodiversidad">
       <div class="container">
-        <div class="">
-          <img src="img/biodiversidad.jpg" height="100px" alt="">
+        <div class="d-flex justify-content-center">
+          <img class="cabecita2" src="img/biodiversidad.png" alt="">
         </div>
-        <div class="row pt-5">
+        <div class="row justify-content-around">
 
-          <div class="col mb-3 text-center title font-weight-bold">
+          <div class="col-12 mb-3 text-center title font-weight-bold">
             <p class="text-uppercase">Rincón de Biodiversidad en la zona</p>
+          </div>
+
+          <div class="col-4 tarjeta3">
+            <img class="img-fluid" src="holder.js/300x300?auto=yes" alt="">
+
+            <div class="contenido-tarjeta3">
+              <p>Hola</p>
+            </div>
+          </div>
+
+          <div class="col-4 tarjeta3">
+            <img class="img-fluid" src="holder.js/300x300?auto=yes" alt="">
+
+            <div class="contenido-tarjeta3">
+              <p>Hola</p>
+            </div>
+          </div>
+
+          <div class="col-4 tarjeta3">
+            <img class="img-fluid" src="holder.js/300x300?auto=yes" alt="">
+
+            <div class="contenido-tarjeta3">
+              <p>Hola</p>
+            </div>
           </div>
 
         </div>
@@ -196,28 +220,28 @@
     </section>
 
     <section id="gastronomia">
-        <div class="contaienr">
-          <div class="row">
-  
-            <div class="col mb-3 text-center title font-weight-bold">
-              <p class="text-uppercase">Gastronomía</p>
-            </div>
-  
-          </div>
-        </div>
-      </section>
+      <div class="contaienr">
+        <div class="row">
 
-      <section id="cultira">
-          <div class="contaienr">
-            <div class="row">
-    
-              <div class="col mb-3 text-center title font-weight-bold">
-                <p class="text-uppercase">Cultura de la región pacífico</p>
-              </div>
-    
-            </div>
+          <div class="col mb-3 text-center title font-weight-bold">
+            <p class="text-uppercase">Gastronomía</p>
           </div>
-        </section>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="cultira">
+      <div class="contaienr">
+        <div class="row">
+
+          <div class="col mb-3 text-center title font-weight-bold">
+            <p class="text-uppercase">Cultura de la región pacífico</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
   </main>
 
@@ -338,6 +362,7 @@
   <script src="js/scrollreveal.min.js"></script>
   <script src="js/aos.js"></script>
   <script src="js/facebook.js"></script>
+  <script src="js/holder.js"></script>
   <script src="js/app.js"></script>
 
   <script>
