--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <main>
     <section id="noticias" class="container-fluid">
 
-      <div class="row">
+      <div class="row justify-content-around">
 
         <div class="col-12">
           <div class="col mb-3 text-center title font-weight-bold">
@@ -125,7 +125,7 @@
           </div>
         </div>
 
-        <div class="col tarjeta2 he">
+        <div class="col col-xl-6 tarjeta2 he">
           <h3>Noticias</h3>
 
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -168,7 +168,7 @@
           </div>
 
         </div>
-        <div class="col-sm-5 col-xl-4 tarjeta2">
+        <div class="col-sm-5 col-xl-5 tarjeta2">
           <h3>Eventos</h3>
 
           <div>
@@ -181,43 +181,45 @@
     </section>
 
     <section id="biodiversidad">
-      <div class="container">
+      <div class="container-fluid">
         <div class="d-flex justify-content-center">
           <img class="cabecita2" src="img/biodiversidad.png" alt="">
         </div>
-        <div class="row justify-content-around">
+        <div class="row text-center justify-content-around">
 
           <div class="col-12 mb-3 text-center title font-weight-bold">
             <p class="text-uppercase">Rincón de Biodiversidad en la zona</p>
           </div>
 
-          <div class="col-4 tarjeta3">
-            <img class="img-fluid" src="holder.js/300x300?auto=yes" alt="">
+          <div class="col-sm-5 col-md-3 col-lg-2 tarjeta3">
+            <img class="img-fluid" src="holder.js/500x300?auto=yes" alt="">
 
-            <div class="contenido-tarjeta3">
-              <p>Hola</p>
+            <div class="">
+              <p>San Cipriano</p>
             </div>
           </div>
 
-          <div class="col-4 tarjeta3">
-            <img class="img-fluid" src="holder.js/300x300?auto=yes" alt="">
+          <div class="col-sm-5 col-md-3 col-lg-2 tarjeta3">
+            <img class="img-fluid" src="holder.js/500x300?auto=yes" alt="">
 
-            <div class="contenido-tarjeta3">
-              <p>Hola</p>
+            <div class="">
+              <p>Otro lugar</p>
             </div>
           </div>
 
-          <div class="col-4 tarjeta3">
-            <img class="img-fluid" src="holder.js/300x300?auto=yes" alt="">
+          <div class="col-sm-5 col-md-3 col-lg-2 tarjeta3">
+            <img class="img-fluid" src="holder.js/500x300?auto=yes" alt="">
 
-            <div class="contenido-tarjeta3">
-              <p>Hola</p>
+            <div class="">
+              <p>Otro lugar más</p>
             </div>
           </div>
 
         </div>
       </div>
     </section>
+
+    <div id="parallax1"></div>
 
     <section id="gastronomia">
       <div class="contaienr">
@@ -230,6 +232,8 @@
         </div>
       </div>
     </section>
+
+
 
     <section id="cultira">
       <div class="contaienr">
@@ -363,10 +367,13 @@
   <script src="js/aos.js"></script>
   <script src="js/facebook.js"></script>
   <script src="js/holder.js"></script>
+  <script src="js/parallax.min.js"></script>
   <script src="js/app.js"></script>
 
   <script>
     AOS.init();
+
+    
   </script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
