--- a/politica.html
+++ b/politica.html
@@ -103,6 +103,68 @@
         </div>
     </section>
 
+    <main>
+        <div class="container">
+            <h3 class="title2">
+                PRINCIPIOS CORPORATIVOS
+            </h3>
+
+            <ol>
+                <li>
+                    Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas para
+                    todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las responsabilidades que
+                    conlleva la membresía con equidad social.
+                </li>
+                <li>
+                    Control democrático por los socios: Las cooperativas son organizaciones democráticas controladas
+                    por sus miembros quienes participan activamente en la definición de las políticas y en la toma de
+                    decisiones, las personas para representar la cooperativa responden ante los miembros. Donde todos
+                    tienen igual derecho de voto.
+                </li>
+                <li>
+                    Participación económica de los socios: Los asociados capitalizan de manera equitativa y controlan
+                    democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad común de la
+                    Cooperativa.
+                </li>
+                <li>
+                    Autonomía e independencia: Las cooperativas son organizaciones autónomas de ayuda mutua,
+                    controladas por sus asociados. Si entran en acuerdos con otras organizaciones (incluyendo
+                    gobiernos) o tienen capital de fuentes externas, lo realizan en términos que aseguren el control
+                    democrático y mantengan la autonomía de la cooperativa". La autonomía es la condición de un ser que
+                    se da a sí mismo su ley y que tiene la libertad de gobernarse por sus propias normas.
+                </li>
+                <li>
+                    Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a sus
+                    dirigentes electos, gerentes y empleados, de tal forma que contribuyan eficazmente al desarrollo de
+                    sus cooperativas. Las cooperativas informan al público en general, particularmente a jóvenes y
+                    creadores de opinión, acerca de la naturaleza y beneficios del Cooperativismo
+                </li>
+                <li>
+                    Cooperación entre cooperativas: Este principio permite consolidar y proyectar el ámbito empresarial
+                    y social de la cooperativa en entornos más amplios, mediante la colaboración práctica y rigurosa de
+                    otras cooperativas y otros niveles de cooperación. "Las cooperativas sirven a sus asociados más
+                    eficazmente y fortalecen el Movimiento Cooperativo, trabajando de manera conjunta por medio de
+                    estructuras locales, nacionales e internacionales".
+                </li>
+                <li>
+                    Compromiso con la comunidad: Las cooperativas trabajan para el desarrollo sostenible de la
+                    comunidad por medio de políticas aceptadas por sus asociados". Si bien las cooperativas están
+                    establecidas en primera instancia para el beneficio de sus miembros, no pueden olvidar que éstos
+                    viven en espacios geográficos específicos y en comunidades definidas y que la cooperativa como tal,
+                    está íntimamente ligada a su comunidad.
+                </li>
+            </ol>
+
+
+
+
+
+
+
+
+        </div>
+    </main>
+
 
     <!-- Footer  -->
     <section id="footer" class="mt-4">
