--- a/politica.html
+++ b/politica.html
@@ -109,7 +109,7 @@
                 PRINCIPIOS CORPORATIVOS
             </h3>
 
-            <ol>
+            <ol class="text-justify">
                 <li>
                     Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas para
                     todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las responsabilidades que
