--- a/politica.html
+++ b/politica.html
@@ -56,7 +56,7 @@
                                         <a class="nav-link" href="acerca.html">Nosotros</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="politica.html">Política de Calidad</a>
+                                        <a class="nav-link" href="#">Política de Calidad</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
