--- a/acerca.html
+++ b/acerca.html
@@ -53,7 +53,7 @@
                                         <a class="nav-link" href="turismo.html">Guía turística</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="acerca.html">Nosotros</a>
+                                        <a class="nav-link" href="#">Nosotros</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="politica.html">Política de Calidad</a>
