--- a/alianzas.html
+++ b/alianzas.html
@@ -32,8 +32,8 @@
             <!-- menu -->
             <nav class="row navbar navbar-expand-sm bg-white">
               <div class="col">
-                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="index.html"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
               </div>
               <div class="col d-none d-md-inline-block">
                 <ul class="navbar-nav mt-2 float-right">
@@ -68,7 +68,7 @@
                     <a class="nav-link" href="politica.html">Política de Calidad</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                    <a class="nav-link" href="#">Alianzas Estratégicas</a>
                   </li>
                 </ul>
               </div>
