--- a/index.html
+++ b/index.html
@@ -219,19 +219,26 @@
       </div>
     </section>
 
-    <div id="parallax1"></div>
-
     <section id="gastronomia">
-      <div class="contaienr">
-        <div class="row">
+      <div id="parallax1"></div>
+      <div class="container-fluid contenido-parallax p-0">
+        <div class="row text-center p-0">
 
-          <div class="col mb-3 text-center title font-weight-bold">
+          <div class="col-12 mb-3 title font-weight-bold">
             <p class="text-uppercase">Gastronomía</p>
+          </div>
+
+          <div class="col">
+            Entre sus platos más reconocidos se encuentran los aborrajados de pescado, ensalada de calamar, camarón o
+            langostinos; empanadas de jaiba; sopa de lentejas, gazapo, almejas y cangrejo; pusandao (caldo de bagre);
+            quebrao (sancocho de carne serrana salada en cecina); pargo o corvina, cazuela de mariscos; chaupiza
+            (pescado pequeño) y huevos de piando, entre otros
           </div>
 
         </div>
       </div>
     </section>
+
 
 
 
@@ -368,12 +375,11 @@
   <script src="js/facebook.js"></script>
   <script src="js/holder.js"></script>
   <script src="js/parallax.min.js"></script>
+  <script src="js/parallax.js"></script>
   <script src="js/app.js"></script>
 
   <script>
     AOS.init();
-
-    
   </script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
