--- a/alianzas.html
+++ b/alianzas.html
@@ -79,7 +79,7 @@
         </header>
         <!-- texto main -->
       </section>
-      <video src="video/casa wenka.mp4" height="400px" width="100%"></video>
+      <video src="video/casa wenka.mp4" height="400px" width="100%" controls muted autoplay></video>
 
 
   <section>
