--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <!-- menu -->
             <nav class="row navbar navbar-expand-sm bg-white">
               <div class="col">
-                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 text-green d-none d-md-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 text-green d-block d-md-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
               </div>
-              <div class="col d-none d-md-inline-block">
+              <div class="col d-none d-sm-inline-block">
                 <ul class="navbar-nav mt-2 float-right">
                   <li class="nav-item">
                     <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
@@ -86,17 +86,15 @@
         <br>
         <div class="container mt-3">
           <div class="row justify-content-center align-items-center">
-            <!-- <p class="lead text-white">COOMOTRANSTUR</p>
-                <p class="display-4 text-white">Empresa líder en el turismo a sancipriano</p> -->
-            <!-- <p class="lead text-white text-center">LOGO DE LA EMPRESA</p> -->
+
             <div class="col-sm-12 col-md-6 col-xl-6 logo-index d-none d-sm-block" data-aos="zoom-in-right">
               <img class="img-fluid" src="img/logo.gif" alt="logo Coomutranstur">
-              <!-- <img class="img-fluid" src="img/logo2.png" alt="logo Coomutranstur"> -->
+
             </div>
             <div class="col-sm-12 col-md-6 col-xl-6 text-center">
               <h3 class="text-white text-center">Empresa líder en el turismo a</h3>
-              <span class="display-3 sancipriano text-white text-center d-md-none d-lg-block d-lg-none d-xl-block d-xl-none d-none d-sm-block">sancipriano</span>
-              <h1><span class="sancipriano text-white text-center d-block d-sm-none d-lg-none d-sm-block">sancipriano</span></h1>
+              <span class="title sancipriano text-white text-center d-none d-xl-block">sancipriano</span>
+              <h1><span class="sancipriano text-white text-center d-block d-xl-none">sancipriano</span></h1>
               <a name="" id="" class="btn btn-lg mt-5 text-center btn-contacto" href="#footer" role="button">Contáctanos</a>
             </div>
           </div>
@@ -234,7 +232,9 @@
             quebrao (sancocho de carne serrana salada en cecina); pargo o corvina, cazuela de mariscos; chaupiza
             (pescado pequeño) y huevos de piando, entre otros
           </div>
-
+          <div class="col-12">
+              <a name="" id="" class="btn botoncito btn-success" href="#!" role="button">Ver más</a>
+          </div>
         </div>
       </div>
     </section>
@@ -264,7 +264,7 @@
   <!-- Contacto  -->
   <section id="contacto">
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
 
         <div class="col mb-3 text-center title font-weight-bold">
