--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <nav class="row navbar navbar-expand-sm bg-white">
               <div class="col">
                 <a class="navbar-brand ml-3 text-green d-none d-md-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                <a class="navbar-brand ml-3 text-green d-block d-md-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+                <a class="title2 navbar-brand ml-3 text-green d-block d-md-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
               </div>
               <div class="col d-none d-sm-inline-block">
                 <ul class="navbar-nav mt-2 float-right">
@@ -219,18 +219,20 @@
 
     <section id="gastronomia">
       <div id="parallax1"></div>
-      <div class="container-fluid contenido-parallax p-0">
-        <div class="row text-center p-0">
+      <div class="container-fluid contenido-parallax d-flex align-items-center p-0">
+        <div class="row text-center">
 
-          <div class="col-12 mb-3 title font-weight-bold">
+          <div class="col-12 mb-3 title  font-weight-bold">
             <p class="text-uppercase">Gastronomía</p>
           </div>
 
           <div class="col">
-            Entre sus platos más reconocidos se encuentran los aborrajados de pescado, ensalada de calamar, camarón o
-            langostinos; empanadas de jaiba; sopa de lentejas, gazapo, almejas y cangrejo; pusandao (caldo de bagre);
-            quebrao (sancocho de carne serrana salada en cecina); pargo o corvina, cazuela de mariscos; chaupiza
-            (pescado pequeño) y huevos de piando, entre otros
+            <p class="text-justify">
+              Entre sus platos más reconocidos se encuentran los aborrajados de pescado, ensalada de calamar, camarón o
+              langostinos; empanadas de jaiba; sopa de lentejas, gazapo, almejas y cangrejo; pusandao (caldo de bagre);
+              quebrao (sancocho de carne serrana salada en cecina); pargo o corvina, cazuela de mariscos; chaupiza
+              (pescado pequeño) y huevos de piando, entre otros
+            </p>
           </div>
           <div class="col-12">
               <a name="" id="" class="btn botoncito btn-success" href="#!" role="button">Ver más</a>
